fix Collapse and Fader animations on mobile

--- a/common/Tree.sass
+++ b/common/Tree.sass
@@ -17,7 +17,6 @@ $selected-hover-color: black
   padding-left: 0
   margin-bottom: 0
 
-  .collapse,
   .collapsing
     @include transition(height ease 0.15s)
 
